--- a/PAGINA_2/index.html
+++ b/PAGINA_2/index.html
@@ -28,24 +28,36 @@
         <div class="container" id="container_principal">
             <div class="row" id="row_circulos_1">
                 <div class="col justify-content-center" id="col_circulos" >
-                    <div class="circle" id="circle_1"></div>
+                    <div class="rectangulo" id="rectangulo_1">
+                        <h3>UI</h3>
+                    </div>
                 </div>
                 <div class="col justify-content-center" id="col_circulos">
-                    <div class="circle" id="circle_2"></div>
+                    <div class="rectangulo" id="rectangulo_2">
+                        <h3>DISEÑO</h3>
+                    </div>
                 </div>
                 <div class="col justify-content-center" id="col_circulos">
-                    <div class="circle" id="circle_3"></div>
+                    <div class="rectangulo" id="rectangulo_3">
+                        <h3>UX</h3>
+                    </div>
                 </div>
             </div>
             <div class="row" id="row_circulos_2">
                 <div class="col justify-content-center" id="col_circulos">
-                    <div class="circle" id="circle_4"></div>
+                    <div class="rectangulo" id="rectangulo_4">
+                        <h3>PATRONES OSCUROS</h3>
+                    </div>
                 </div>
                 <div class="col justify-content-center" id="col_circulos">
-                    <div class="circle" id="circle_5"></div>
+                    <div class="rectangulo" id="rectangulo_5">
+                        <h3>PATRONES</h3>
+                    </div>
                 </div>
                 <div class="col justify-content-center" id="col_circulos">
-                    <div class="circle" id="circle_6"></div>
+                    <div class="rectangulo" id="rectangulo_6">
+                        <h3>CAMPO LABORAL</h3>
+                    </div>
                 </div>   
             </div>    
         </div>
